--- a/source/_posts/老鹰主机使用心得.md
+++ b/source/_posts/老鹰主机使用心得.md
@@ -1,8 +1,8 @@
 ---
 title: 老鹰主机使用心得
 date: 2012-02-09 20:00:54
-categories: [未分类]
-tags: 
+categories:
+tags:
 ---
 
 今天突然发现我的网站上不去了。只要给他们发ticket了，要求给我换个IP。
